@@ -15,41 +15,54 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 
-
-
 @Configuration
 public class WebMvcConfig implements WebMvcConfigurer {
 
     @Override
     public void addCorsMappings(CorsRegistry registry) {
-        registry.addMapping("/**").allowedOrigins("*").allowedMethods("GET", "POST", "PUT", "DELETE", "PATCH");
+        registry.addMapping("/**")
+                .allowedOrigins("*")
+                .allowedMethods("GET", "POST", "PUT", "DELETE", "PATCH");
     }
 
     @Override
     public void addResourceHandlers(ResourceHandlerRegistry registry) {
+        // Handle React static resources
         registry.addResourceHandler("/**")
-                .addResourceLocations("classpath:/static/")
-//                .setCacheControl(CacheControl.maxAge(365, TimeUnit.DAYS))
+                .addResourceLocations("classpath:/static/") // React build goes here
                 .resourceChain(false)
                 .addResolver(new PushStateResourceResolver());
+
+        // Explicitly serve sitemap.xml, robots.txt, and Google verification
+        registry.addResourceHandler(
+                "/sitemap.xml",
+                "/robots.txt",
+                "/google*.html",
+                "/yandex*.html" // ✅ Yandex verification support
+        ).addResourceLocations("classpath:/static/");
+
     }
 
-    private class PushStateResourceResolver implements ResourceResolver {
-        private Resource index = new ClassPathResource("/static/index.html");
-        private List<String> handledExtensions = Arrays.asList("html", "js", "json", "csv", "css", "png", "svg", "eot", "ttf", "otf", "woff", "appcache", "jpg", "jpeg", "gif", "ico", "mp3", "mp4" );
-        private List<String> ignoredPaths = Arrays.asList("api");
+    private static class PushStateResourceResolver implements ResourceResolver {
+        private final Resource index = new ClassPathResource("/static/index.html");
+
+        private final List<String> handledExtensions = Arrays.asList(
+                "html", "js", "json", "csv", "css", "png", "svg", "eot", "ttf", "otf",
+                "woff", "appcache", "jpg", "jpeg", "gif", "ico", "mp3", "mp4");
+
+        private final List<String> ignoredPaths = List.of("api");
 
         @Override
-        public Resource resolveResource(HttpServletRequest   request, String requestPath, List<? extends Resource> locations, ResourceResolverChain chain) {
+        public Resource resolveResource(HttpServletRequest request, String requestPath,
+                                        List<? extends Resource> locations, ResourceResolverChain chain) {
             return resolve(requestPath, locations);
         }
 
         @Override
-        public String resolveUrlPath(String resourcePath, List<? extends Resource> locations, ResourceResolverChain chain) {
+        public String resolveUrlPath(String resourcePath,
+                                     List<? extends Resource> locations, ResourceResolverChain chain) {
             Resource resolvedResource = resolve(resourcePath, locations);
-            if (resolvedResource == null) {
-                return null;
-            }
+            if (resolvedResource == null) return null;
             try {
                 return resolvedResource.getURL().toString();
             } catch (IOException e) {
@@ -58,16 +71,17 @@ public class WebMvcConfig implements WebMvcConfigurer {
         }
 
         private Resource resolve(String requestPath, List<? extends Resource> locations) {
-            if (isIgnored(requestPath)) {
-                return null;
-            }
+            if (isIgnored(requestPath)) return null;
+
             if (isHandled(requestPath)) {
                 return locations.stream()
                         .map(loc -> createRelative(loc, requestPath))
-                        .filter(resource -> resource != null && resource.exists())
+                        .filter(res -> res != null && res.exists())
                         .findFirst()
-                        .orElseGet(null);
+                        .orElse(null);
             }
+
+            // fallback to index.html (SPA routing)
             return index;
         }
 
@@ -80,13 +94,12 @@ public class WebMvcConfig implements WebMvcConfigurer {
         }
 
         private boolean isIgnored(String path) {
-            return ignoredPaths.contains(path);
+            return ignoredPaths.stream().anyMatch(path::startsWith);
         }
 
         private boolean isHandled(String path) {
             String extension = StringUtils.getFilenameExtension(path);
-            return handledExtensions.stream().anyMatch(ext -> ext.equals(extension));
+            return handledExtensions.contains(extension);
         }
     }
-
 }
